fix nav-bar gap

--- a/style.css
+++ b/style.css
@@ -299,4 +299,7 @@ span {
   .section1 {
     text-align: left;
   }
+  .nav-bar {
+    gap: 5rem;
+  }
 }
